--- a/game/src/components/homescreen.css
+++ b/game/src/components/homescreen.css
@@ -20,3 +20,18 @@ h1 {
     color: hotpink;
     font-size:  2rem;
 }
+
+button {
+    margin: 20px;
+    background-color: black;
+    color: hotpink;
+    font-size: 2rem;
+    /* display: flex;
+    flex-direction: row;
+    justify-content: space-evenly; */
+}
+
+.btn {
+    display: flex;
+    justify-content: space-evenly;
+}
